--- a/apps/wasm/index.html
+++ b/apps/wasm/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RChoreoApp (WASM)</title>
+    <link rel="icon" type="image/svg+xml" href="./app_icon.svg" />
     <style>
       html, body { height: 100%; margin: 0; }
       body { display: flex; align-items: center; justify-content: center; }
