--- a/apps/wasm/index.html
+++ b/apps/wasm/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/svg+xml" href="./app_icon.svg" />
     <style>
       html, body { height: 100%; margin: 0; }
-      body { display: flex; align-items: center; justify-content: center; }
-      #canvas { width: 360px; height: 240px; }
+      body { display: flex; align-items: stretch; justify-content: stretch; overflow: hidden; }
+      #canvas { width: 100vw; height: 100vh; display: block; }
     </style>
   </head>
   <body>
