ensuring that file picker buttons stay hidden

--- a/apps/wasm/index.html
+++ b/apps/wasm/index.html
@@ -9,6 +9,8 @@
       html, body { height: 100%; margin: 0; }
       body { display: flex; align-items: stretch; justify-content: stretch; overflow: hidden; }
       #canvas { width: 100vw; height: 100vh; display: block; }
+      .wasm-file-picker { display: none !important; }
+      #wasm-choreo-picker, #wasm-audio-picker, #wasm-image-picker { display: none !important; }
     </style>
   </head>
   <body>
